push final manual

--- a/src/views/cover.ejs
+++ b/src/views/cover.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Verport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/Logo Tecnologia  Moderno Degradado .png" />
+    <link rel="icon" href="/img/Logo Tecnologia  Moderno Degradado .png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +16,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="/css/estilos.css" />
     <title>Testudine</title>
     <style>
       body {
@@ -42,22 +42,14 @@
         style="grid-template-columns: 1fr 2fr"
       >
         <div class="ps-5">
-          <a
-            href="/"
-            class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-cloud-haze"
-              VerBox="0 0 16 16"
-            >
-              <path
-                d="M4 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 2a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm2 2a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM13.405 4.027a5.001 5.001 0 0 0-9.499-1.004A3.5 3.5 0 1 0 3.5 10H13a3 3 0 0 0 .405-5.973zM8.5 1a4 4 0 0 1 3.976 3.555.5.5 0 0 0 .5.445H13a2 2 0 0 1 0 4H3.5a2.5 2.5 0 1 1 .605-4.926.5.5 0 0 0 .596-.329A4.002 4.002 0 0 1 8.5 1z"
-              />
-            </svg>
+          <a href="/">
+            <img
+              src="/img/Logo Tecnologia  Moderno Degradado .png"
+              width="40"
+              height="40"
+              alt="logo"
+              class="rounded-3"
+            />
           </a>
         </div>
 
@@ -112,7 +104,7 @@
     <!--/Header-->
 
     <!--Main-->
-    <main class=" text-center" style="padding-top: 80px; padding-bottom: 87px;">
+    <main class=" text-center" style="padding-top: 118px;">
       <h1 class="pt-5">Repositorio bloqueado.</h1>
       <p class="lead px-5">
         Algunos repositorios buscan tener mas privacidad y bloquean su
@@ -120,7 +112,7 @@
         boton para enviar una peticion de visualizacion.
       </p>
       <p class="lead">
-        <a href="/404.html" class="btn btn-lg fw-bold btn-dark">Enviar peticion</a>
+        <a href="/404" class="btn btn-lg fw-bold btn-dark">Enviar peticion</a>
       </p>
     </main>
 
@@ -128,18 +120,18 @@
 
     <!--Footer-->
 
-    <footer >
+    <footer style="padding-top: 130px;">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="./index.html" class="nav-link px-2 text-muted">Home</a>
+          <a href="/index" class="nav-link px-2 text-muted">Home</a>
         </li>
         <li class="nav-item">
-          <a href="./terminos.html" class="nav-link px-2 text-muted"
+          <a href="/terminos" class="nav-link px-2 text-muted"
             >Terminos y condiciones</a
           >
         </li>
         <li class="nav-item">
-          <a href="./404.html" class="nav-link px-2 text-muted">Privacidad</a>
+          <a href="/404" class="nav-link px-2 text-muted">Privacidad</a>
         </li>
       </ul>
       <p class="text-center text-muted">© 2022 Testudine, Tech</p>
