--- a/src/views/find.ejs
+++ b/src/views/find.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Verport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/Logo Tecnologia  Moderno Degradado .png" />
+    <link rel="icon" href="/img/Logo Tecnologia  Moderno Degradado .png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="/css/estilos.css" />
     <title>Testudine</title>
     <style>
       body {
@@ -128,7 +128,7 @@
                   </p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="./school.html">
+                      <a href="/school">
                         <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
                         </a>
                       <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
@@ -150,7 +150,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a href="./cover.html">
+                        <a href="/cover">
                         <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
                         </a>
                         <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
@@ -174,7 +174,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a href="./cover.html">
+                        <a href="/cover">
                         <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
                         </a>
                         <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
@@ -199,7 +199,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a href="./cover.html">
+                        <a href="/cover">
                         <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
                         </a>
                         <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
@@ -223,7 +223,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a href="./cover.html">
+                        <a href="/cover">
                         <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
                         </a>
                         <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
@@ -247,7 +247,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a href="./cover.html">
+                        <a href="/cover">
                         <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
                         </a>
                         <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
@@ -272,7 +272,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a href="./cover.html">
+                        <a href="/cover">
                         <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
                         </a>
                         <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
@@ -296,7 +296,7 @@
                     </p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <a href="./cover.html">
+                        <a href="/cover">
                         <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
                         </a>
                         <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
@@ -308,29 +308,12 @@
                   </div>
                 </div>
               </div>
-              <div class="col">
-                <div class="card shadow-sm">
-                  <img src="/img/Colegios-img/img-colegio-n8.jpg" alt="" class="bd-placeholder-img card-img-top" width="100%" height="225"  >
-                 
-                
-                  <div class="card-body">
-                      <h5 class="card-title text-testudine">Colegio Nueva Inglaterra</h5>
-                    <p class="card-text">
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, delectus! Sint eos fugiat delectus nam quibusdam incidunt reiciendis eveniet illo id quis vero ut, est voluptate consequatur magni quae pariatur.
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="btn-group">
-                        <a href="./cover.html">
-                        <button type="button" class="btn btn-sm btn-outline-dark">Ver</button>
-                        </a>
-                        <button type="button" class="btn btn-sm btn-outline-dark">Editar</button>
-                      </div>
-                      <small class="text-muted">659 usuarios
-
-                      </small>
-                    </div>
-                  </div>
-                </div>
+              <div class="col d-flex align-items-center justify-content-center" >
+                <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="#6507A7" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                </svg>
+              </a>
               </div>
           </div>
         </div>
