--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -61,6 +61,7 @@
         </div>
         <div class="d-flex">
 
+          <div class="input-group ">
           <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
             <input
               type="search"
@@ -68,8 +69,9 @@
               placeholder="Buscar..."
               aria-label="Search"
             />
+            
           </form>
-
+        </div>
           <div class="dropdown text-end">
             <a
               href="#"
@@ -111,40 +113,10 @@
 
     <!--/Header-->
 
-    <!--Main-->
-    <div class="px-4 py-5 pt-5 pb-5 text-center mainColor">
-      <img
-        class="d-block mx-auto mb-4"
-        src="/img/Logo Tecnologia  Moderno Degradado .png"
-        alt=""
-        width="82"
-        height="72"
-        style="border-radius: 10px"
-      />
-      <h1 class="display-5 fw-bold">Comienza ahora</h1>
-      <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">
-          Testudine es una base de datos para calificaciones basada en
-          repositorios completamente gratuita, comienza por ingresar o salta a
-          la busqueda de repositorios de las instituciones.
-        </p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <a href="/login">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">
-              Ingresa
-            </button>
-          </a>
-          <a href="/search">
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">
-              Busca
-            </button>
-          </a>
-        </div>
-      </div>
-    </div>
+    
 
     <!--Somos-->
-    <main id="main" class="px-5 py-5 pt-5 pb-5">
+    <main id="main" class="px-5   pb-5">
       <div
         id="carouselExampleCaptions"
         class="carousel slide"
@@ -221,6 +193,37 @@
     </main>
 
     <!--/Somos-->
+    <!--Main-->
+    <div class="px-4 py-5 pt-5 my-5 pb-5 text-center mainColor">
+      <img
+        class="d-block mx-auto mb-4"
+        src="/img/Logo Tecnologia  Moderno Degradado .png"
+        alt=""
+        width="82"
+        height="72"
+        style="border-radius: 10px"
+      />
+      <h1 class="display-5 fw-bold">Comienza ahora</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">
+          Testudine es una base de datos para calificaciones basada en
+          repositorios completamente gratuita, comienza por ingresar o salta a
+          la busqueda de repositorios de las instituciones.
+        </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <a href="/login">
+            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">
+              Ingresa
+            </button>
+          </a>
+          <a href="/search">
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+              Busca
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
 
     <!--Contacto-->
     <section id="contacto">
@@ -298,7 +301,7 @@
                     registrarte
                   </li>
                 </ul>
-                <a href="/singin.html">
+                <a href="/singin">
                   <button
                     type="button"
                     class="w-100 btn btn-lg btn-outline-primary"
