--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -11,7 +11,7 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="/css/estilos.css" />
     <title>Testudine</title>
     <style>
       body {
@@ -55,14 +55,6 @@
      
         <div class="d-flex">
 
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-            <input
-              type="search"
-              class="form-control"
-              placeholder="Buscar..."
-              aria-label="Search"
-            />
-          </form>
 
           <div class="dropdown text-end">
             <a
@@ -105,8 +97,8 @@
     <!--/Header-->
 
     <!--Main-->
-
-    <div class="my-5 py-5 container align-items-center">
+    <div >
+    <div class="my-5 container align-items-center" style="padding-top: 100px;">
 
       <div class=" text-center ">
         <h1 class="display-2 fw-bold lh-1 mb-4 text-testudine">
@@ -144,7 +136,7 @@
     <!--/Main-->
 
     <!--Footer-->
-<div class="container pt-5 mt-5" >
+<div class="container  mt-5" style="padding-top: 140px;" >
     <footer class="">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
@@ -162,6 +154,8 @@
       <p class="text-center text-muted">© 2022 Testudine, Tech</p>
     </footer>
   </div>
+</div>
+
     <!--/Footer-->
   </body>
 </html>
