--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -11,43 +11,31 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="/css/estilos.css" />
     <title>Error 404</title>
   
   </head>
   <body>
    <!--Header-->
-   <header class="px-3 py-3 pb-3">
-    <div class="container">
+   <header class="px-3 py-3 pb-5">
+    <div class="container d-flex  justify-content-between">
+     
       <div
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
-      >
-        <a
-          href="/"
-          class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none"
+    
+          class="align-items-center mb-2 mb-lg-0 text-white text-decoration-none justify-content-start rounded-3"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-cloud-haze"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M4 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 2a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm2 2a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM13.405 4.027a5.001 5.001 0 0 0-9.499-1.004A3.5 3.5 0 1 0 3.5 10H13a3 3 0 0 0 .405-5.973zM8.5 1a4 4 0 0 1 3.976 3.555.5.5 0 0 0 .5.445H13a2 2 0 0 1 0 4H3.5a2.5 2.5 0 1 1 .605-4.926.5.5 0 0 0 .596-.329A4.002 4.002 0 0 1 8.5 1z"
-            />
-          </svg>
+        <a href="/">
+          <img
+            src="/img/Logo Tecnologia  Moderno Degradado .png"
+            width="40"
+            height="40"
+            alt="logo"
+            class="rounded-3"
+          />
         </a>
-
-        <ul
-          class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
-        >
-          <li>
-            <a href="./index.html" class="nav-link px-2 link-secondary">Home</a>
-          </li>
-          
-        </ul>
+      </div>
+      
+      <div class="d-flex">
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
           <input
@@ -92,6 +80,7 @@
             <li><a class="dropdown-item" href="#">Salir</a></li>
           </ul>
         </div>
+        </div>
       </div>
     </div>
   </header>
@@ -102,7 +91,7 @@
      
         
       <div class="text-center">
-        <img src="./assets/S1_Page Not Found.jpg" class="rounded" alt="..." style="max-width:400px; max-height: 400px;">
+        <img src="/img/S1_Page Not Found.jpg" class="rounded" alt="..." style="max-width:400px; max-height: 400px;">
       </div>
      
     </main>
@@ -112,10 +101,10 @@
     <footer class="py-2 pt-5">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item">
-          <a href="/index.html" class="nav-link px-2 text-muted">Home</a>
+          <a href="/" class="nav-link px-2 text-muted">Home</a>
         </li>
         <li class="nav-item">
-          <a href="./terminos.html" class="nav-link px-2 text-muted"
+          <a href="/terminos" class="nav-link px-2 text-muted"
             >Terminos y condiciones</a
           >
         </li>
