--- a/src/views/crearN.ejs
+++ b/src/views/crearN.ejs
@@ -77,7 +77,7 @@
         <hr />
         <ul class="nav nav-pills flex-column mb-auto">
           <li class="nav-item">
-            <a href="/school" class="nav-link text-black" aria-current="page">
+            <a href="/" class="nav-link text-black" aria-current="page">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -88,11 +88,11 @@
               >
                 <path
                   fill-rule="evenodd"
-                  d="m8 3.240 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.240l6-6zm5-.740V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"
+                  d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"
                 />
                 <path
                   fill-rule="evenodd"
-                  d="M7.240 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.240 1.5z"
+                  d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"
                 />
               </svg>
               Home
@@ -119,7 +119,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="nav-link text-white active">
+            <a href="/onceA" class="nav-link link-dark">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -135,9 +135,11 @@
               Usuarios
             </a>
           </li>
+          
+
           <%if(admin){%>
             <li>
-              <a href="/once" class="nav-link link-dark">
+              <a href="/crearN" class="nav-link link-dark text-white active">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -160,7 +162,7 @@
               </a>
             </li>
             <li>
-              <a href="/onceA" class="nav-link link-dark text-white">
+              <a href="/subirN" class="nav-link link-dark ">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -180,6 +182,7 @@
               </a>
             </li>
           <%}%>
+
         </ul>
         <hr />
         <div class="dropdown pb-3">
@@ -229,124 +232,82 @@
       <!--/Side Bar-->
       <!--Main-->
       <div
-        class="p-5 mb-1 bg-light rounded-3 d-flex flex-column text-center mainBack align-self-center"
-        style="width: 70%; height: 99.1vh"
+      class="p-5 mb-1 bg-light rounded-3 d-flex flex-column text-center mainBack"
+      style="width: 70%; justify-self: end; height: 100vh"
       >
-        <div class="container-fluid pb-3">
-          <h1 class="display-5 fw-bold text-testudine">11 - A</h1>
-        </div>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">Apellido</th>
-              <th scope="col">Edad</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td> <a href="/userPrueba">
-                Usuario
-            </a></td>
-              <td>Prueba</td>
-              <td>16</td>
-            </tr>
+      
+      <form action="/crearnota" method="post">
+        <div
+        class="modal modal-signin position-static d-block "
+        tabindex="-1"
+        role="dialog"
+        id="modalSignin"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content rounded-4 shadow">
+        
 
-           
-              <tr>
-                <th scope="row">2</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
+            <div class="modal-body p-5 pt-0">
             
-            <a href="">
-              <tr>
-                <th scope="row">3</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
-            </a>
-            <a href="">
-              <tr>
-                <th scope="row">4</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
-            </a>
-            <a href="">
-              <tr>
-                <th scope="row">5</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
-            </a>
-            <a href="">
-              <tr>
-                <th scope="row">6</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
-            </a>
-            <a href="">
-              <tr>
-                <th scope="row">7</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
-            </a>
-            <a href="">
-              <tr>
-                <th scope="row">8</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
-            </a>
-            <a href="">
-              <tr>
-                <th scope="row">9</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
-            </a>
-            <a href="">
-              <tr>
-                <th scope="row">10</th>
-                <td> <a href="/userPrueba">
-                    Usuario
-                </a></td>
-                <td>Prueba</td>
-                <td>16</td>
-              </tr>
-            </a>
-          </tbody>
-        </table>
+                <div class="form-floating mb-3 mt-3">
+                    <p>Grado</p>
+                    <select name="grado" id="categoria" class="form-select mt-3">
+                        <option value="11">11</option>
+                        <option value="10">10</option>
+                        <option value="9">9</option>
+                        <option value="8">8</option>
+                      </select>
+                </div>
+                <div class="form-floating mb-3">
+                    <p>Materia</p>
+                    <select name="materia" id="categoria" class="form-select mt-3 ">
+                        <option value="matematicas">Matematicas</option>
+                        <option value="espanol">Español</option>
+                        <option value="geometria">Geometria</option>
+                        <option value="filosofia">Filosofia</option>
+                      </select>
+                </div>
+                <div class="form-floating mb-3">
+                    <p>Tipo de nota</p>
+                    <select name="nota" id="categoria" class="form-select mt-3 ">
+                        <option value="actitudinal">Actitudinal</option>
+                        <option value="procedimental">Procedimental</option>
+                        <option value="conceptual">Conceptual</option>
+                      </select>
+                </div>
+                
+              
+                <div class="form-floating mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="floatingInput"
+                    name="descripcion"
+                  />
+                  <label for="floatingInput">Descripcion de la nota</label>
+                </div>
+               
+                <button
+                  class="w-100 mb-2 btn btn-lg rounded-3 btn-primary"
+                  type="submit"
+                  id="comment-btn"
+                >
+                  Crear
+                </button>
+                
+             
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
+      
+   
+    
+      </div>
+    
+
+     
 
       <!--/Main-->
     </div>
