--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,68 +4,113 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/Logo Tecnologia  Moderno Degradado .png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="icon" href="/img/Logo Tecnologia  Moderno Degradado .png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="/css/estilos.css" />
     <title>Testudine</title>
     <style>
       body {
-        background-image: linear-gradient(to left top, #ffffff, #fcfcff, #f9f8ff, #f6f5ff, #f3f2ff, #f3f2ff, #f3f2ff, #f3f2ff, #f6f5ff, #f9f8ff, #fcfcff, #ffffff);
-             }
+        background-image: linear-gradient(
+          to left top,
+          #ffffff,
+          #fcfcff,
+          #f9f8ff,
+          #f6f5ff,
+          #f3f2ff,
+          #f3f2ff,
+          #f3f2ff,
+          #f3f2ff,
+          #f6f5ff,
+          #f9f8ff,
+          #fcfcff,
+          #ffffff
+        );
+      }
     </style>
   </head>
   <body class="text-center">
+    <main class="form-signin w-100 py-4 h-100 centerLogin">
+      
 
-    <main class="form-signin w-100 py-4 h-100 centerLogin ">
-        <div >
-      <form class="mx-5 px-5">
-        <a href="/index.html">
-        <img
-          class="mb-1"
-          src="./assets/Mi proyecto.png"
-          alt="Logo"
-          width="200"
-          height="200"
-        />
-        </a>
-        <h1 class="h3 mb-3 fw-normal">Bienvenido</h1>
+      <!---->
+      <form action="/logear" method="post">
+        <div
+        class="modal modal-signin position-static d-block py-5"
+        tabindex="-1"
+        role="dialog"
+        id="modalSignin"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content rounded-4 shadow">
+            <a href="/">
+              <img
+                class=""
+                src="/img/Mi proyecto.png"
+                alt="Logo"
+                width="200"
+                height="200"
+              />
+            </a>
+            <div class="  pb-4 border-bottom-0">
+              <!-- <h1 class="modal-title fs-5" >Modal title</h1> -->
+              <h1 class="fw-bold mb-0 fs-2">Bienvenido</h1>
+            </div>
+            <div class="modal-body p-5 pt-0">
+            
+              
+              <div class="form-floating mb-3">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="floatingInput"
+                  placeholder="correo@ejemplo.com"
+                  name="correo"
+                />
+                <label for="floatingInput">Direccion de Email</label>
+              </div>
+              <div class="form-floating mb-3">
+                <input
+                type="password"
+                class="form-control"
+                id="floatingPassword"
+                placeholder="Password"
+                name="contraseña"
+              />
+              <label for="floatingPassword">Contraseña</label>
 
-        <div class="form-floating mx-5 ">
-          <input
-            type="email"
-            class="form-control"
-            id="floatingInput"
-            placeholder="correo@ejemplo.com"
-          />
-          <label for="floatingInput">Direccion de Email</label>
+             
+              </div>
+              <label class="pb-3">
+                <input type="checkbox" value="remember-me" /> Recuerdame
+              </label>
+              <button
+                class="w-100 mb-2 btn btn-lg rounded-3 btn-primary"
+                type="submit"
+                id="comment-btn"
+              >
+                Ingresar
+              </button>
+              
+              <p class="mt-5 mb-3 text-muted">
+                ¿No tienes una cuenta?
+                <a href="/singin" class="link-primary">Registrate</a>
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="form-floating mx-5">
-          <input
-            type="password"
-            class="form-control "
-            id="floatingPassword"
-            placeholder="Password"
-          />
-          <label for="floatingPassword">Contraseña</label>
-        </div>
-
-        <div class="checkbox mb-3 mt-3">
-          <label>
-            <input type="checkbox" value="remember-me" /> Recuerdame
-          </label>
-        </div>
-        <button class=" btn btn-lg btn-primary d-grid gap-2 col-6 mx-auto" type="submit">
-          Ingresar
-        </button>
-        <p class="mt-5 mb-3 text-muted">¿No tienes una cuenta? <a href="/singin.html" class="link-primary">Registrate</a></p>
+      </div>
       </form>
-    </div>
-    </main>
 
+    </main>
   </body>
 </html>
