--- a/src/views/singin.ejs
+++ b/src/views/singin.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/assets/Logo Tecnologia  Moderno Degradado .png">
+    <link rel="icon" href="/img/Logo Tecnologia  Moderno Degradado .png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="/css/estilos.css" />
     <title>Testudine</title>
     <style>
       body {
@@ -24,76 +24,95 @@
   <body class="text-center">
 
     <main class="form-signin w-100 m-auto  h-100">
-        <div >
-      <form class="mx-5 px-5">
-        <a href="/index.html">
-        <img
-          class="mb-1"
-          src="./assets/Mi proyecto.png"
-          alt=""
-          width="200"
-          height="200"
-        />
-        </a>
-        <h1 class="h3 mb-3 fw-normal">Registrate</h1>
+  
 
-        <div class="form-floating mx-5">
-            <input
-              type="text"
-              class="form-control d-grid gap-2 col-6 mx-auto"
-              id="floatingPassword"
-              placeholder="Nombre"
-            />
-            <label for="floatingPassword">Nombre de usuario</label>
-          </div>
-
-        <div class="form-floating mx-5">
-          <input
-            type="email"
-            class="form-control d-grid gap-2 col-6 mx-auto"
-            id="floatingInput"
-            placeholder="correo@ejemplo.com"
+    <!---->
+    <div
+    class="modal modal-signin position-static d-block py-5"
+    tabindex="-1"
+    role="dialog"
+    id="modalSignin"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content rounded-4 shadow">
+        <a href="/">
+          <img
+            class=""
+            src="/img/Mi proyecto.png"
+            alt="Logo"
+            width="200"
+            height="200"
           />
+        </a>
+        <div class="  pb-4 border-bottom-0">
+          <!-- <h1 class="modal-title fs-5" >Modal title</h1> -->
+          <h1 class="fw-bold mb-0 fs-2">Registrate</h1>
+        </div>
+
+        <form action="/registrar" method="post">
+        <div class="modal-body p-5 pt-0">
+        
+          
+          
+          <div class="form-floating mb-3">
+            <input
+              type="email"
+              class="form-control"
+              id="floatingInput"
+              placeholder="correo@ejemplo.com"
+              name="correo"
+            />
           <label for="floatingInput">Direccion de Email</label>
         </div>
-        <div class="form-floating mx-5">
+        <div class="form-floating mb-3">
           <input
-            type="password"
-            class="form-control d-grid gap-2 col-6 mx-auto"
-            id="floatingPassword"
-            placeholder="Password"
-          />
-          <label for="floatingPassword">Contraseña</label>
+          type="text"
+          class="form-control d-grid gap-2 col-6 mx-auto"
+          id="floatingPassword"
+          placeholder="Nombre"
+          name="nombre"
+        />
+        <label for="floatingPassword">Nombre de usuario</label>
         </div>
-        <div class="form-floating mx-5">
-            <input
+            <div class="form-floating mb-3">
+              <input
               type="password"
-              class="form-control d-grid gap-2 col-6 mx-auto"
+              class="form-control"
               id="floatingPassword"
               placeholder="Password"
+              name="contraseña"
             />
-            <label for="floatingPassword">Confirmar contraseña</label>
-          </div>
+            <input type="hidden" name="rol" value="user">
+            <label for="floatingPassword">Contraseña</label>
 
-          <div class="checkbox mb-3 mt-3">
-            <label>
-              <input type="checkbox" value="remember-me" /> He leido y acepto todas los
-              <a href="/terminos.html" class="link-primary">Terminos y condiciones</a>
-            </label>
-          </div>
+           
+            </div>
+          
         
+ 
+           
+     
 
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me" /> Recuerdame
-          </label>
+
+            <button
+              class="w-100 mb-2 btn btn-lg rounded-3 btn-primary"
+              type="submit"
+              id="comment-btn"
+            >
+              Ingresar
+            </button>
+
+        
+            
+            <p class="mt-5 mb-3 text-muted">
+              ¿Ya tienes una cuenta?
+              <a href="/login" class="link-primary">Ingresa</a>
+            </p>
+          </form>
         </div>
-        <button class=" btn btn-lg btn-primary d-grid gap-2 col-6 mx-auto" type="submit">
-          Registrarse
-        </button>
-        <p class="mt-5 mb-3 text-muted">© 2022</p>
-      </form>
+      </div>
     </div>
+  </div>
     </main>
 
   </body>
